# Event-Monitoring-and-Alerting-System

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
cpp-core/: CMakeLists.txt
cpp-core/include/: event_processor.hpp  event_queue.hpp  models.hpp  thread_pool.hpp
cpp-core/src/: event_processor.cpp  event_queue.cpp  main.cpp  thread_pool.cpp
cpp-core/tests/: test_processor.cpp
docker/: cpp-core.Dockerfile  python-api.Dockerfile
python-api/: alembic.ini  requirements.txt
python-api/alembic/: env.py
python-api/alembic/versions/: 0001_initial.py
python-api/app/: main.py
python-api/app/api/: alerts.py  analytics.py  events.py
python-api/app/core/: config.py
python-api/app/models/: __init__.py  alert.py  event.py
python-api/app/schemas/: alert.py  event.py
python-api/app/services/: alert_engine.py  alert_service.py  analytics_service.py  event_service.py
python-api/tests/: test_api.py
